<resources>
    <string name="app_name">WZ Tracker</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="blank"> </string>
    <string name="no_connection">No connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="username">Username</string>
    <string name="battle_net">Battle.net</string>
    <string name="xbox">Xbox</string>
    <string name="playstation">Playstation</string>
    <string name="search">Search</string>
    <string name="username_123">Username#123</string>
    <string name="application_icon">Application icon</string>
    <string name="try_again">Try again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mode">Mode</string>
    <string name="place">Place</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="kd">KD</string>
    <string name="from">from</string>
    <string name="author">Janek Łuczka</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="instruction_title">How to enable profile search</string>
    <string name="instruction_step_one">Log into your Call of Duty profile</string>
    <string name="instruction_step_two">Find username in top right corner</string>
    <string name="instruction_step_three"><![CDATA[In Account Preferences go to Privacy & Security. There set both Game Tag Searchable and Game Play Data to All]]></string>
    <string name="damage_done">Damage done</string>
    <string name="damage_taken">Damage taken</string>
    <string name="wins">Wins</string>
    <string name="go_to_cod_website">Go to COD website</string>
    <string name="activision_id">Activision ID</string>
    <string name="select_user">Select user</string>
    <string name="fragment_username_img_instruction_second_step_example_description">Call of Duty website top-right corner containing account details</string>
    <string name="fragment_username_img_instruction_third_step_example_description">Game Tag Searchable and Game Play Data set to All</string>
</resources>