<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mt_background"
        tools:context=".fragments.UsernameFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/fragment_username_material_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/fragment_username_ll_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_username_tv_top_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/mt_background" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/fragment_username_material_divider_ll_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/fragment_username_tv_instruction_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/instruction_title"
                    android:textAlignment="center"
                    android:textColor="@color/mt_text_on_light"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/fragment_username_tv_instruction_first_step_number"
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_bold"
                        android:text="@string/number_1"
                        android:textAlignment="center"
                        android:textColor="@color/mt_text_on_light"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/fragment_username_tv_instruction_first_step_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:text="@string/instruction_step_one"
                        android:textColor="@color/mt_text_on_light"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/fragment_username_tv_instruction_first_step_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_username_tv_instruction_first_step_number" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/fragment_username_btn_go_to_cod_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/go_to_cod_website"
                    android:textSize="16sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/fragment_username_tv_instruction_second_step_number"
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_bold"
                        android:text="@string/number_2"
                        android:textAlignment="center"
                        android:textColor="@color/mt_text_on_light"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/fragment_username_tv_instruction_second_step_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:text="@string/instruction_step_two"
                        android:textColor="@color/mt_text_on_light"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/fragment_username_tv_instruction_second_step_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_username_tv_instruction_second_step_number" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/fragment_username_img_instruction_second_step_example"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/fragment_username_img_instruction_second_step_example_description"
                    app:srcCompat="@drawable/activision_id_cropped" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/fragment_username_tv_instruction_third_step_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:text="@string/instruction_step_three"
                        android:textColor="@color/mt_text_on_light"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/fragment_username_tv_instruction_third_step_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fragment_username_tv_instruction_third_step_number" />

                    <TextView
                        android:id="@+id/fragment_username_tv_instruction_third_step_number"
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_bold"
                        android:text="@string/number_3"
                        android:textAlignment="center"
                        android:textColor="@color/mt_text_on_light"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/fragment_username_img_instruction_third_step_example"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/fragment_username_img_instruction_third_step_example_description"
                    app:srcCompat="@drawable/game_tag_and_game_play_searchable_all_cropped" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/fragment_username_material_divider_ll_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/fragment_username_tv_bottom_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/mt_background" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/fragment_username_material_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fragment_username_cl_user_selection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_username_cl_user_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_username_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/activision_id"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/fragment_username_btn_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_username_et_input_activision_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="text"
                    android:maxLines="1"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_username_btn_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/select_user"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>