<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_lifetime_stats_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mt_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/fragment_lifetime_stats_sv_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/fragment_lifetime_stats_card_wins"
                        style="@style/detailsStatsCardStyle"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="true"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/fragment_lifetime_stats_cl_wins"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/fragment_lifetime_stats_wins_label"
                                style="@style/labelStyle"
                                android:text="@string/wins"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/fragment_lifetime_stats_wins_amount"
                                style="@style/statStyle"
                                android:textColor="@color/mt_text_on_light"
                                android:textSize="48sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/fragment_lifetime_stats_wins_label"
                                tools:text="11" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/fragment_lifetime_stats_card_kills"
                            style="@style/detailsStatsCardStyle"
                            android:layout_width="0dp"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp"
                            app:cardPreventCornerOverlap="true"
                            app:layout_constraintEnd_toStartOf="@+id/fragment_lifetime_stats_card_deaths"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/material_on_surface_stroke"
                            app:strokeWidth="1dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/fragment_lifetime_stats_cl_kills"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/fragment_lifetime_stats_tv_kills_label"
                                    style="@style/labelStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/kills"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/fragment_lifetime_stats_tv_kills_amount"
                                    style="@style/statStyle"
                                    android:textColor="@color/mt_text_on_light"
                                    android:textSize="32sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/fragment_lifetime_stats_tv_kills_label"
                                    tools:text="5000" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/fragment_lifetime_stats_card_deaths"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp"
                            app:cardPreventCornerOverlap="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/fragment_lifetime_stats_card_kills"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/material_on_surface_stroke"
                            app:strokeWidth="1dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/fragment_match_details_cl_deaths"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/fragment_lifetime_stats_tv_deaths_label"
                                    style="@style/labelStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/deaths"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/fragment_lifetime_stats_tv_deaths_amount"
                                    style="@style/statStyle"
                                    android:textColor="@color/mt_text_on_light"
                                    android:textSize="32sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/fragment_lifetime_stats_tv_deaths_label"
                                    tools:text="4000" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/fragment_lifetime_stats_card_kd"
                        style="@style/detailsStatsCardStyle"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="true"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/fragment_lifetime_stats_cl_kd"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/radial_gradient_first_place_background">

                            <TextView
                                android:id="@+id/fragment_lifetime_stats_tv_kd_label"
                                style="@style/labelStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kd"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/fragment_lifetime_stats_tv_kd_number"
                                style="@style/statStyle"
                                android:textSize="32sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/fragment_lifetime_stats_tv_kd_label"
                                tools:text="1.25" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </ScrollView>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/fragment_lifetime_stats_progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>